summer-jaeb/tests/compile_fail/mutable_event_ref.stderr
error: event parameter must be a reference: `event: &EventType`
  --> tests/compile_fail/mutable_event_ref.rs:10:26
   |
10 | async fn on_event(event: &mut MyEvent) -> HandlerResult {
   |                          ^^^^^^^^^^^^

warning: unused import: `jaeb::HandlerResult`
 --> tests/compile_fail/mutable_event_ref.rs:3:5
  |
3 | use jaeb::HandlerResult;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
